fix(map) improve layout for map on mobile
[Finishes #78465148]

- Adds our first test that includes js, some issues to resolve around
  cors, but it works well enough for map layout

--- a/src/pivotal-ui/components/map.css.scss
+++ b/src/pivotal-ui/components/map.css.scss
@@ -12,24 +12,26 @@ Full width map with marker at Pivotal Labs SF location, and an optional informat
 
 ```html_example
 <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-
-<div class='pane pane-map'>
-  <div class='container pan'>
-    <div class='row'>
-      <div class='col-sm-6 col-md-8 col-sm-offset-1'>
-        <div class='map-overlay panel panel-basic bg-neutral-10 paxxl'>
-          <h3>Location</h3>
-          <address class='h4 pvl'>Pivotal Software Inc.<br>
-          875 Howard Street<br>
-          San Francisco, CA 94103
-          </address>
-          <p class='h4'>Support: <a href='mailto:support@run.pivotal.io'>support@run.pivotal.io</a></p>
-          <p class='h4'>Twitter: <a href='https://twitter.com/pivotalws'>@pivotalws</a></p>
-        </div>
+<div class="map-wrapper">
+  <div class='row'>
+    <div class='col-sm-6 col-md-8 col-sm-offset-1'>
+      <div class='map-overlay panel panel-basic bg-neutral-10 paxxl'>
+        <h3>Location</h3>
+        <address class='h4 pvl'>Pivotal Software Inc.<br>
+        875 Howard Street<br>
+        San Francisco, CA 94103
+        </address>
+        <p class='h4'>Support: <a href='mailto:support@run.pivotal.io'>support@run.pivotal.io</a></p>
+        <p class='h4'>Twitter: <a href='https://twitter.com/pivotalws'>@pivotalws</a></p>
       </div>
     </div>
   </div>
-  <div id='labs-map'></div>
+  <div class='pane pane-map'>
+    <div class='container pan'>
+
+    </div>
+    <div id='labs-map'></div>
+  </div>
 </div>
 ```
 
@@ -77,6 +79,10 @@ google.maps.event.addDomListener(window, 'load', maps.initialize);
 ```
 */
 
+.map-wrapper {
+  position: relative;
+}
+
 .pane-map {
   height: 450px;
   position: relative;
@@ -86,6 +92,13 @@ google.maps.event.addDomListener(window, 'load', maps.initialize);
   position: absolute;
   top: 70px;
   z-index: 99;
+}
+
+@media (max-width: $screen-sm) {
+  .map-overlay {
+    top: 0;
+    position: relative;
+  }
 }
 
 #labs-map {
